fix navbar mobile flickering

--- a/app/components/shared_components/NavbarMobile/styles.css
+++ b/app/components/shared_components/NavbarMobile/styles.css
@@ -11,6 +11,8 @@
   z-index: 3;
   display: flex;
   flex-direction: column;
+  max-height: 94.5dvh;
+  will-change: transform;
 }
 
 .alwayws_visible{
